# fluent_vision_ros2

./: .gitignore  .mcp.json  CLAUDECODE_RULES.md  README.md  TODO_aspara_analyzer.md  fastdds_shared_memory.xml  frames_2025-08-08_19.16.42.gv  frames_2025-08-08_19.16.50.gv  fv  package-lock.json  run_face_recognizer.sh
src/ai/fv_aspara_analyzer/: CMakeLists.txt  README.md  package.xml
src/ai/fv_aspara_analyzer/doc/: display_specification.md  system_design.md
src/ai/fv_aspara_analyzer/include/fv_aspara_analyzer/: aspara_analysis_logic.hpp  aspara_analyzer_base.hpp  aspara_analyzer_thread.hpp  aspara_info.hpp  aspara_pointcloud_processor.hpp  aspara_selection.hpp  aspara_visualizer.hpp  cvx_text.hpp  fv_aspara_analyzer_node.hpp
src/ai/fv_aspara_analyzer/launch/: fv_aspara_analyzer_d405_launch.py  fv_aspara_analyzer_d415_launch.py
src/ai/fv_aspara_analyzer/scripts/: efficient_pointcloud_processor.py  pointcloud_service.py
src/ai/fv_aspara_analyzer/src/: aspara_analysis_logic.cpp  aspara_analyzer_lite.cpp  aspara_analyzer_thread.cpp  aspara_pointcloud_processor.cpp  aspara_selection.cpp  asparagus_visual_node.cpp  cvx_text.cpp  efficient_aspara_analyzer.cpp  fps_controlled_publisher.cpp  fv_aspara_analyzer_node.cpp  point_cloud_overlay_node.cpp  simple_depth_to_cloud.cpp  simple_pointcloud_generator.cpp  use_camera_service.cpp
src/ai/fv_face_recognizer/: CMakeLists.txt  README.md  package.xml
src/ai/fv_face_recognizer/config/: face_recognizer_config.yaml
src/ai/fv_object_detector/: CMakeLists.txt  README.md  package.xml
src/ai/fv_object_detector/config/: d405_object_detector_config.yaml  d415_object_detector_config.yaml  default_config.yaml  yolov10_config.json
src/ai/fv_object_detector/include/fv_object_detector/: ai_model.hpp  detection_data.hpp  object_tracker.hpp  yolov10_model.hpp  yolov8_model.hpp
src/ai/fv_object_detector/launch/: fv_object_detector_launch.py  object_detector.launch.py
src/ai/fv_object_detector/src/: ai_model.cpp  fv_object_detector_node.cpp  object_tracker.cpp  yolov10_model.cpp
src/ai/fv_object_detector/srv/: GetDetectionStats.srv  SetDetectionState.srv
src/ai/fv_object_mask_generator/: CMakeLists.txt  README.md  package.xml
src/ai/fv_object_mask_generator/config/: d405_mask_generator_config.yaml  d415_mask_generator_config.yaml
src/ai/fv_object_mask_generator/include/fv_object_mask_generator/: fv_object_mask_generator_node.hpp
src/ai/fv_object_mask_generator/launch/: fv_object_mask_generator_d405_launch.py  fv_object_mask_generator_d415_launch.py  fv_object_mask_generator_launch.py
src/ai/fv_object_mask_generator/src/: fv_object_mask_generator_node.cpp
src/common/cvx/: CMakeLists.txt  package.xml
src/common/cvx/include/cvx/: cvx.hpp  cvx_image.hpp  cvx_image_filter.hpp  cvx_text.hpp
src/common/cvx/src/: cvx_draw.cpp
src/common/fluent_cloud/: CMakeLists.txt  package.xml
src/common/fluent_cloud/src/: fluent_cloud.cpp
src/common/fluent_lib/: CMakeLists.txt  CONTRIBUTING.md  package.xml
src/common/fluent_lib/include/: cloud.hpp  fluent.hpp  fluent_text.hpp  image.hpp
src/common/fluent_lib/include/fluent_lib/: fluent.hpp
src/common/fluent_lib/include/utils/: fps.hpp
src/common/fluent_lib/legacy/fluent_vision/: CMakeLists.txt  README_JP.md
src/common/fluent_lib/src/: cvx_image.cpp  cvx_image_filter.cpp  cvx_image_utils.cpp  fluent_animation.cpp  fluent_cloud_impl.cpp  fluent_image.cpp  fluent_text.cpp  fluent_utils.cpp  fluent_vision.cpp
src/sensors/fv_camera/: CMakeLists.txt  README.md  package.xml
src/sensors/fv_camera/config/: default_config.yaml  minimal_config.yaml
src/sensors/fv_camera/include/fv_camera/: fv_camera_node.hpp
src/sensors/fv_camera/launch/: fv_camera_launch.py
src/sensors/fv_camera/src/: fv_camera_node.cpp  list_cameras_node.cpp
src/sensors/fv_camera/srv/: GetCameraInfo.srv  SetCameraSettings.srv
src/sensors/fv_realsense/: CMakeLists.txt  README.md  package.xml
src/sensors/fv_realsense/config/: default_config.yaml  minimal_config.yaml
src/sensors/fv_realsense/include/fv_realsense/: fv_realsense_node.hpp
src/sensors/fv_realsense/launch/: fv_realsense_launch.py
src/sensors/fv_realsense/scripts/: list_cameras.py
src/sensors/fv_realsense/src/: fv_realsense_node.cpp  fv_realsense_simple_node.cpp  image_saver_node.cpp
src/sensors/fv_realsense/srv/: GeneratePointCloud.srv  GetCameraInfo.srv  GetDistance.srv  GetPointCloud.srv  SetMode.srv
src/streaming/fv_image_distributor/: CMakeLists.txt  README.md  package.xml
src/streaming/fv_image_distributor/include/fv_image_distributor/: fv_image_distributor.hpp
src/streaming/fv_image_distributor/src/: fv_image_distributor_node.cpp
src/streaming/fv_mjpeg_server/: CMakeLists.txt  README.md  package.xml
src/streaming/fv_mjpeg_server/config/: .gitkeep
src/streaming/fv_mjpeg_server/src/: fv_mjpeg_server_node.cpp
src/streaming/fv_recorder/: CMakeLists.txt  README.md  package.xml
src/streaming/fv_recorder/config/: fv_recorder_config.yaml  recorder_config.yaml
src/streaming/fv_recorder/launch/: fv_recorder.launch.py  fv_recorder_launch.py
src/streaming/fv_recorder/msg/: RecordingStatus.msg
src/streaming/fv_recorder/src/: format_writers.cpp  fv_player_node.cpp  fv_recorder_node.cpp
src/streaming/fv_recorder/srv/: StartPlayback.srv  StartRecording.srv  StopPlayback.srv  StopRecording.srv
src/streaming/fv_rtmp_server/: CMakeLists.txt  README.md  package.xml
src/streaming/fv_rtmp_server/config/: camera_info_o4.yaml  camera_info_o4_pro.yaml  fv_rtmp_server.yaml
src/streaming/fv_rtmp_server/launch/: fv_rtmp_server.launch.py
src/streaming/fv_rtmp_server/src/: rtmp_bridge_node.cpp  rtmp_server.cpp  video_processor.cpp
src/streaming/fv_websocket_server/: CMakeLists.txt  README.md  package.xml
src/streaming/fv_websocket_server/launch/: .gitkeep
src/streaming/fv_websocket_server/src/: fv_websocket_server_node.cpp
src/utils/fv_topic_relay/: CMakeLists.txt  README.md  package.xml
src/utils/fv_topic_relay/launch/: fv_topic_relay_launch.py
src/utils/fv_topic_relay/src/: fv_topic_relay_node.cpp
(+196 files in other folders)
